# ai-engineering-buildcamp

./: .gitignore  README.md  pyproject.toml
01-foundation/: openai-checkpoint.ipynb  openai.ipynb
01-foundation/02-rag/: openai.ipynb
02-rag/: rag.ipynb
03-structured-output/: structured_output.ipynb
04-structured-rag/: structured-rag.ipynb
05-streaming-structured-output/: streaming-structured-output.ipynb
06-vector-search/: vector-search.ipynb
07-advanced-chunking/: advanced-chunking.ipynb
homework/: hw1.ipynb
